--- a/index.html
+++ b/index.html
@@ -10,22 +10,6 @@
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
 
-    <style>
-        .bd-placeholder-img {
-            font-size: 1.125rem;
-            text-anchor: middle;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            user-select: none;
-        }
-
-        @media (min-width: 768px) {
-            .bd-placeholder-img-lg {
-                font-size: 3.5rem;
-            }
-        }
-    </style>
-
     <link href="main.css" rel="stylesheet">
 </head>
 <body class="d-flex h-100 text-center text-white bg-dark">
@@ -36,8 +20,8 @@
             <h3 class="float-md-start mb-0">CyberSoft Notification</h3>
             <nav class="nav nav-masthead justify-content-center float-md-end">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
-                <a class="nav-link" href="#">Features</a>
-                <a class="nav-link" href="register.html">Register</a>
+                <a class="nav-link" href="register-admin.html">Admin register</a>
+                <a class="nav-link" href="register-user.html">User register</a>
             </nav>
         </div>
     </header>
@@ -51,7 +35,7 @@
     </main>
 
     <footer class="mt-auto text-white-50">
-        <p>Cover template for <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>
+        <p>CyberSoft</p>
     </footer>
 </div>
 
